# Logisim-CPU-and-Compiler

./: .gitignore  README.md  assembler.php  docker-compose.yaml  lamp.dockerfile
DinkPiler/: CMakeLists.txt  error.c  main.c
DinkPiler/lib/: CMakeLists.txt  hashmap.c  hashmap.h  strutil.c  strutil.h  testing.c  testing.h  vector.c  vector.h
app/: L.php  Opcode.md  advent_of_code.php  assembler.php  ed.hup  fizzbuzz.php  main.dink  test.php  triangler_rasterizer.circ  v5.circ
app/lib/: float.dink  graphics.dink  hash.dink  list.dink  math.dink  stdio.dink  stdlib.dink  string.dink  test.dink  triangle.dink
binaries/: cube3d.hex  fibonacci.hex  multi_model_3d_scene.hex  triangle_2d.hex  triangles3d.hex
